# goit-pythonweb-hw-03

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  error.html  main.py  message.html  pyproject.toml  read.html  requirements.txt
templates/: error.html  index.html  message.html  read.html
