[tool.poetry]
name = "goit-pythonweb-hw-03"
version = "0.1.0"
description = "hw-03"
authors = ["Darina Khalina <darina.khalina@namecheap.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
jinja2 = "^3.1.6"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
